--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -15,6 +15,7 @@
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
+            <!--do NOT consider and empty item, i.e., `, ,` as an item towards to the count-->
              <input id="lunch-menu" type="text" ng-model="lunchItem"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control">
